<resources>
    <string name="app_name">Caça-paraules</string>
    <string name="play">Play</string>
    <string name="exit">Exit</string>
    <string name="login">Login</string>
    <string name="session">Account</string>
    <string name="ranking">Ranking</string>
    <string name="signin">Signin</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="return_text">Return</string>
    <string name="match_game">Match Game</string>
    <string name="difference_game">Difference Game</string>
    <string name="how_to_play">How to Play?</string>
    <string name="no_more_images">No more images to play wait until new images come...</string>
    <string name="match_game_score">Match Game Score</string>
    <string name="difference_game_score">Difference Game Score</string>
    <string name="downloading_fix_text">Downloading static files... (wait and don\'t turn off the screen)</string>
    <string name="downloading_text">Downloading files... (wait and don\'t turn off the screen)</string>
    <string name="no_internet">No internet connection</string>
    <string name="minigame_select">Please select a minigame</string>
    <string name="highscore">Highscore</string>
    <string name="initializing_game">Initializing the game...</string>
    <string name="logout">Logout</string>
    <string name="users_text">Users</string>
    <string name="top_10">Top 10</string>
    <string name="logged_success">Login Success!</string>
    <string name="logged_fail">Login failed...</string>
    <string name="signin_success">User created successfully!</string>
    <string name="signin_fail">User creation failed...</string>
    <string name="language_text">Language</string>
    <string name="ca" translatable="false">Català</string>
    <string name="zh" translatable="false">中文</string>
    <string name="en" translatable="false">English</string>
    <string name="es" translatable="false">Español</string>
    <string name="options">Options</string>
    <string name="resume">Resume</string>
    <string name="play_again">Play Again</string>
    <string name="none_of_these">None of these</string>
    <string name="score">"Score "</string>
    <string name="lose">You lose!</string>
    <string name="starts_zero">Starts the game with 0 points</string>
    <string name="win">You win!</string>
    <string name="starts_x_points">Starts with last game points</string>
    <string name="more_than_one_different">More than one different</string>
    <string name="all_same">They are the same</string>
    <string name="next_level">Next level</string>
    <string name="round">"Round "</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="level">Level</string>
    <string name="anonym">Anonymous</string>
    <string name="preferences_file">hunting_words_prefs</string>
    <string name="language_type">english</string>
    <string name="title_loading_info">loading game information</string>
    <string name="not_enough_images">There are not enough images</string>
    <string name="text_match_score">Match score:</string>
    <string name="text_diff_score">Diff score:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="zero" translatable="false">0</string>
    <string name="default_token" translatable="false">-1</string>
    <string name="no_user">Please, login first.</string>
    <string name="back">Back</string>
    <string name="stats">Stats</string>
    <string name="jump_game">Jump Words</string>
    <string name="text_jump_score">Jump score:</string>
    <string name="user_pass_sign_toast">: Username and/or password must have more than 3 chracters</string>
    <string name="error_neutral_toast">ERROR</string>
    <string name="error_low_toast">System disagree</string>
    <string name="error_medium_toast">My deepest apologies</string>
    <string name="test_login">Logged as test account, please log in your own account</string>
    <string name="test_account_name" translatable="false">test</string>
    <string name="help_create_user_button_text">How to create&#10;a account?</string>
    <string name="content_description_left_arrow" translatable="false">left arrow</string>
    <string name="content_description_right_arrow" translatable="false">right arrow</string>
    <string name="hint_fill_help_text" translatable="false">help text</string>
    <string name="help_account_text_0" translatable="false">Tenim en la part superior esquerra la paraula “test”. Això vol dir que el sistema t’ha auto iniciat la sessió com a tester perquè l’últim cop que estaves amb el joc, vas jugar directament sense iniciar sessió.</string>
    <string name="help_account_text_1" translatable="false">Per tancar la sessió que ens l’ha iniciat automàticament el joc o iniciat per nosaltres, li donem al botó “Desconnectar”.</string>
    <string name="help_account_text_2" translatable="false">Tenim en la part superior esquerra la paraula “Anònim” (si el tens en un altre idioma, tindrà la paraula anònim però escrita en aquell idioma).</string>
    <string name="help_account_text_3" translatable="false">Ens trobem amb el sistema per iniciar sessió. En aquest cas, tant si volem crear un nou usuari com si volem iniciar la sessió amb un usuari creat, tenim que omplir les dades amb un nom d’usuari i la contrasenya.</string>
    <string name="help_account_text_4" translatable="false">Si es una nova compte, escollim el nom d’usuari i la consenya que volem. Per iniciar una sessió, li donem a “Connectar”, i si estem creant un nou usuari, li donem a “Crear usuari” (en cas de que ens doni error després de donar-li al botó, potser que el nom d’usuari que has escollit ja està agafat, prova amb un altre).</string>
    <string name="previous_image">Previous</string>
    <string name="next_image">Next</string>
</resources>
