<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/ranking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/language"
                android:layout_alignBottom="@+id/language"
                android:layout_marginEnd="17dp"
                android:layout_marginRight="17dp"
                android:layout_toLeftOf="@+id/login"
                android:layout_toStartOf="@+id/login"
                android:text="@string/ranking" />


            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/language"
                android:layout_alignBottom="@+id/language"
                android:layout_marginEnd="17dp"
                android:layout_marginRight="17dp"
                android:layout_toLeftOf="@+id/language"
                android:layout_toStartOf="@+id/language"
                android:text="@string/login" />


            <Button
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginTop="24dp"
                android:text="@string/language_text" />
        </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/play" />

        <Button
            android:id="@+id/quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exit" />
    </LinearLayout>

</RelativeLayout>
