<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:clickable="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_match_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/match_game" />


                <com.cunoraz.gifview.library.GifView
                    android:id="@+id/imageViewMatch"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    custom:gif="@mipmap/difference" />


                <Button
                    android:id="@+id/match"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/match_game" />

                <Button
                    android:id="@+id/how_to_play_match"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how_to_play" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_difference_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/difference_game" />


                <com.cunoraz.gifview.library.GifView
                    android:id="@+id/imageViewDifference"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    custom:gif="@mipmap/match" />


                <Button
                    android:id="@+id/difference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/difference_game" />

                <Button
                    android:id="@+id/how_to_play_difference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how_to_play" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>